test/sema/too-many-generic-arguments-on-type.delta.output
too-many-generic-arguments-on-type.delta:7:15: error: too many generic arguments to 'C', expected 0
    _ = C<int>();
              ^
