test/sema/too-many-generic-arguments-on-type.delta
// RUN: %check_errors %not %delta -typecheck %s

struct C {}

void main() {
    // CHECK: [[@LINE+1]]:15: error: too many generic arguments to 'C', expected 0
    _ = C<int>();
}
